fixed the box on ie8
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@20227 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/corporate/css/main.css
+++ b/skins/corporate/css/main.css
@@ -1354,3 +1354,7 @@ ul#hub-blog-articles li .blog-jump-icon {
 .clear-fix {
   clear:both;
 }
+
+#wikia-search-submit {
+ outline:none\9;
+}
